python3.13 (3.13.0~rc1-2) UNRELEASED; urgency=medium

  * Drop patch ctypes-arm. Superseded upstream in 2.7.5.
  * Drop patch fix-py_compile. Superseded upstream in 3.11.
  * Drop patch sphinx3, superseded upstream in 3.10.

 -- Stefano Rivera <stefanor@debian.org>  Fri, 09 Aug 2024 20:31:22 +0900

python3.13 (3.13.0~rc1-1) unstable; urgency=medium

  * Python 3.13.0 release candidate 1.
  * Don't pass -specs=package-metadata.specs.
  * Don't mention 2to3 in package description anymore. Closes: #1077957.
  * Prefix patches for python3-minimal with 'min-'.
  * libpython-stdlib: Include the _gdbm and _tkinter extensions, prefixed
    with a dot, and no dependencies on the gbm and tcl/tk libraries.
  * Update symbols files.

 -- Matthias Klose <doko@debian.org>  Tue, 06 Aug 2024 08:03:09 +0200

python3.13 (3.13.0~b4-1) unstable; urgency=medium

  [ Stefano Rivera ]
  * New upstream beta.
  * Drop patches superseded upstream: riscv64-no-perf-trampoline,
    skip-unallocated-arena-free.

 -- Stefano Rivera <stefanor@debian.org>  Fri, 19 Jul 2024 10:12:48 +0900

python3.13 (3.13.0~b3-6) unstable; urgency=medium

  * Don't consider fixing interpreters in .so files, fixing a FTBFS on s390x.
  * Instead of exporting ELF_PACKAGE_METADATA, which isn't consumed directly,
    export the environment variables required by the metadata spec file.

 -- Stefano Rivera <stefanor@debian.org>  Thu, 18 Jul 2024 11:00:47 +0900

python3.13 (3.13.0~b3-5) unstable; urgency=medium

  [ Matthias Klose ]
  * Set ELF_PACKAGE_METADATA, if unset.
  * Fix multiarch path for hurd-amd64. Addresses: #1076321.

  [ Benjamin Drung ]
  * debian/rules: Use pkg-info.mk
  * debian/rules: Use architecture.mk
  * Rely on SOURCE_DATE_EPOCH for reproducibility

  [ Graham Inggs ]
  * Skip test_exceptions and test_repl which never run to
    completion on the Ubuntu autopkgtest infrastructure

 -- Matthias Klose <doko@debian.org>  Wed, 17 Jul 2024 12:23:29 +0200
