@@ -1,6 +1,8 @@
 # DP: needs forwarding. bootstrap python fails with a compiler defaulting to -fPIE,
 # DP: then setting CFLAGS_NODIST and LDFLAGS_NODIST to -fno-PIE.
 
+Needs forwarding.
+
 --- a/Makefile.pre.in
 +++ b/Makefile.pre.in
 @@ -97,7 +97,7 @@
