@@ -1,3 +1,7 @@
+Description: packaging (<< 24.1) doesn't recognise the +.
+ We usually have git-updates that have the +
+
+Bug-upstream: https://github.com/python/cpython/issues/99968
 --- a/Include/patchlevel.h
 +++ b/Include/patchlevel.h
 @@ -23,7 +23,7 @@
